- Corrected alignment of comment count text in new child category view

--- a/global.fixes.css
+++ b/global.fixes.css
@@ -179,3 +179,8 @@ a.Bookmarked::before
     overflow:visible;
     position:relative;
 }
+
+.ChildCategoryList .Item .Meta.Hidden .MItem.CommentCount
+{
+    text-align:right;
+}
